syntax = "proto3";

package user.v1.follow;

option go_package = "vw_user/api/v1/follow;followv1";

service Follow {
    rpc FollowUser(FollowUserReq) returns (FollowUserResp) {}
    rpc UnfollowUser(UnfollowUserReq) returns (UnfollowUserResp) {}
}

message FollowUserReq {
    int64 user_id          = 1;
    int64 follower_user_id = 2;
    int64 follow_list_id   = 3;
}
message FollowUserResp {
    int32 status_code = 1;
    string message    = 2;
}

message UnfollowUserReq {
    int64 user_id          = 1;
    int64 followee_user_id = 2;
}
message UnfollowUserResp {
    int32 status_code = 1;
    string message    = 2;
}
